<resources>
    <string name="app_name">FirestoreExample</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="title_and_description">Title: %1$s \n Description: %2$s</string>
    <string name="update_description">Update description</string>
    <string name="delete_description">Delete description</string>
    <string name="delete_note">Delete note</string>
    <string name="add">Add</string>
    <string name="priority">Priority</string>
    <string name="tags">Tags</string>
    <string name="one">1</string>
    <string name="priority_colon">Priority:</string>
</resources>
