<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="ua.turskyi.firestoreexample.MainActivity">

    <EditText
        android:id="@+id/edit_text_title"
        android:autofillHints="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edit_text_description"
        android:autofillHints="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="text"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/edit_text_priority"
        android:layout_width="match_parent"
        android:autofillHints="@string/priority"
        android:layout_height="wrap_content"
        android:hint="@string/priority"
        android:inputType="number"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/edit_text_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tags"
        android:inputType="text"
        android:autofillHints="@string/tags"
        tools:targetApi="o" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addNote"
        android:text="@string/add" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="loadNotes"
        android:text="@string/load" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

    </androidx.core.widget.NestedScrollView>

</LinearLayout>